--- a/app/src/main/res/layout/activity_freedom.xml
+++ b/app/src/main/res/layout/activity_freedom.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/im2" />
+        app:srcCompat="@drawable/sbiin" />
 
     <Button
         android:id="@+id/btnLogin"
